--- a/.github/workflows/security.yaml
+++ b/.github/workflows/security.yaml
@@ -176,6 +176,8 @@ jobs:
         uses: gitleaks/gitleaks-action@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          config-path: .gitleaks.toml
 
   dependency-review:
     name: Dependency Review
