--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -78,8 +78,8 @@ jobs:
             VCS_REF=${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          provenance: true
-          sbom: true
+          provenance: ${{ github.event_name != 'pull_request' }}
+          sbom: ${{ github.event_name != 'pull_request' }}
 
       - name: Run Trivy vulnerability scanner on image
         uses: aquasecurity/trivy-action@master
