--- a/.github/workflows/container-security.yml
+++ b/.github/workflows/container-security.yml
@@ -27,7 +27,7 @@ jobs:
           docker build -f Dockerfile.production -t modelmuxer:latest .
 
       - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@0.20.0
         with:
           image-ref: "modelmuxer:latest"
           format: "sarif"
@@ -35,7 +35,7 @@ jobs:
           severity: "CRITICAL,HIGH"
 
       - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v2
+        uses: github/codeql-action/upload-sarif@v3
         if: always()
         with:
           sarif_file: "trivy-results.sarif"
@@ -48,16 +48,14 @@ jobs:
           output-file: sbom.spdx.json
 
       - name: Upload SBOM artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: sbom
           path: sbom.spdx.json
 
-      - name: Sign container image
+      - name: Install Cosign
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
-        uses: sigstore/cosign-installer@v3.1.1
-        with:
-          cosign-release: "v2.1.1"
+        uses: sigstore/cosign-installer@v3
 
       - name: Sign the published container image
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
